# Poker

./: .gitignore  AGENTS.md  README.md  requirements.txt
docs/: ARCHITECTURE.md  GLOSSARY.md
engine/: CMakeLists.txt
engine/include/poker/: card.h  common.h  equity_calculator.h  game_state.h  hand_evaluator.h  range.h  strategy.h
engine/src/: card.cpp  equity_calculator.cpp  game_state.cpp  hand_evaluator.cpp  main.cpp  range.cpp
engine/tests/: test_card.cpp  test_equity.cpp  test_game_state.cpp  test_hand_eval.cpp  test_range.cpp
solver/: __init__.py
solver/core/: __init__.py  card.py  constants.py  equity.py  hand_eval.py
solver/engine/: abstraction.py  cfr.py  game_tree.py
solver/modes/: cash.py  tournament.py
solver/ui/: app.py
tests/: test_core.py
